# imnode-playground

./: CMakeLists.txt  README.md  imnodes_playground-2023-11-27_19.36.21.mkv
.cache/clangd/index/: graph.h.934A2FBE0ECDECC0.idx  imconfig.h.F74A3B549BD59F80.idx  imgui.cpp.E033061B4B1E07E9.idx  imgui.h.CD4AF662E1FA1F65.idx  imgui_draw.cpp.1C255051DEF890BD.idx  imgui_impl_glfw.cpp.FA206ABBC65D7556.idx  imgui_impl_glfw.h.7A6405FADD2105E6.idx  imgui_impl_opengl3.cpp.6F8EF225979DC9C8.idx  imgui_impl_opengl3.h.6BA80893D6F857F3.idx  imgui_impl_opengl3_loader.h.E488BB1713FA1EC1.idx  imgui_internal.h.A210368CEC4EDB0A.idx  imgui_tables.cpp.5B3F3BFD7B82FA7A.idx  imgui_widgets.cpp.084947AF6F276D07.idx  imnodes.cpp.63B4A6583F82D759.idx  imnodes.h.2E95E384FAB14D81.idx  imnodes_internal.h.D9CF88124D311E49.idx  imstb_rectpack.h.A8C95168117A5A2E.idx  imstb_textedit.h.080FB34F2093CD98.idx  imstb_truetype.h.281683F79D828D45.idx  main.cpp.E2B8ABDF5DC8C5D4.idx  node.h.E96A09F785B840C5.idx  node_editor.h.CF57E8CF833CEB0B.idx  ui_node.h.415621188EAC5ADC.idx
app/: CMakeLists.txt  main.cpp
ext/imgui/examples/: opengl_glfw_example.cpp
ext/imnodes/: imnodes.cpp
include/: graph.h  node.h  node_editor.h  ui_node.h
